--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -90,6 +90,7 @@
 
 .heroImage {
   object-fit: cover;
+  object-position: center 20%;
 }
 
 /* Roles */
@@ -159,6 +160,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center 20%;
 }
 
 .featuredContent {
@@ -213,8 +215,8 @@
   }
 
   .heroImageWrap {
-    height: 50vh;
-    min-height: 300px;
+    height: 60vh;
+    min-height: 400px;
     order: -1;
   }
 
